# AST-Monitor-web

./: .gitignore  README.md  conf.py  config.py  generated_rules.json  index.rst  main.py  package-lock.json  pyproject.toml  run_tests.py
_build/doctrees/: README.doctree  ast_monitor_web.app.doctree  ast_monitor_web.doctree  environment.pickle  index.doctree  modules.doctree
_build/doctrees/frontend/: README.doctree
_build/html/: .buildinfo  ast_monitor_web.app.html  ast_monitor_web.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_sources/: ast_monitor_web.app.rst.txt
ast_monitor_web/: __init__.py  run.py
ast_monitor_web/app/: __init__.py  extensions.py  utils.py
ast_monitor_web/app/auth/: __init__.py  views.py
ast_monitor_web/app/dashboard/: coach.py  cyclist.py  data_fetching.py  import_export.py
ast_monitor_web/app/data_processing/: process.py
ast_monitor_web/app/models/: activites.py  database.py  training_plans_model.py  training_sessions_model.py  user.py  usermodel.py
ast_monitor_web/app/sensor_data/: sensor_data.py
ast_monitor_web/csv/: generated_rules.json  open-meteo-maribor.csv
csv/: generated_rules.json
database/: creatingDBscript.sql
docs/: ast_monitor_web.rst  modules.rst  start-frontend.bat
documentation/: CYCLearn-Documentation.docx  DiplomskaPrezentacija.pptx
frontend/: package-lock.json  package.json
frontend/cypress/e2e/: athleteprofile.cy.js  creatingplan.cy.js  login.cy.js  passrecovery.cy.js  profile.cy.js  registration.cy.js
frontend/src/: App.css  App.js
frontend/src/Components/: AuthManager.js  (+1 more)
scripts/: ast_monitor_test.py  copyCodeCSS.py  copyCodeJS.py  populateSessions.py
tests/: __init__.py  populateSessions.py  test_auth.py  test_coach.py  test_cyclist.py
(+40 files in other folders)
