[tool.poetry]
name = "ast-monitor-web"
version = "0.1.0"
description = ""
authors = ["Vanja Pajovic <vanja.pajovic@student.um.si>"]
readme = "README.md"
packages = [{include = "ast_monitor_web"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
authlib = "^1.3.0"
oauth = "^1.0.1"
auth = "^0.5.3"
flask-jwt-extended = "^4.6.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-migrate = "^4.0.7"
flask-mail = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
